--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -54,17 +54,17 @@
             <div class="form-esq">
                 <label>Data inicial:</label>
                 <div class="forDate">
-                    <input type="number" placeholder="dia" max="31" min="1" name="dia_ini" class="data"/>
-                    <input type="number" placeholder="mes" max="12" min="1" name="mes_ini" class="data"/>
-                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_ini" class="data"/>
+                    <input type="number" placeholder="dia" max="31" min="1" name="dia_ini" class="data_ini"/>
+                    <input type="number" placeholder="mes" max="12" min="1" name="mes_ini" class="data_ini"/>
+                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_ini" class="data_ini"/>
                 </div>
             </div>
             <div class="form-esq">
                 <label>Data final:</label>
                 <div class="forDate">
-                    <input type="number" placeholder="dia" max="31" min="1" name="dia_fim" class="data" />
-                    <input type="number" placeholder="mes" max="12" min="1" name="mes_fim" class="data"/>
-                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_fim" class="data"/>
+                    <input type="number" placeholder="dia" max="31" min="1" name="dia_fim" class="data_ini" />
+                    <input type="number" placeholder="mes" max="12" min="1" name="mes_fim" class="data_ini"/>
+                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_fim" class="data_ini"/>
                 </div>
             </div>
             <div class="form-esq">
@@ -105,17 +105,17 @@
             <div class="form-esq">
                 <label>Data inicial:</label>
                 <div class="forDate">
-                    <input type="number" placeholder="dia" max="31" min="1" name="dia_ini" class="data"/>
-                    <input type="number" placeholder="mes" max="12" min="1" name="mes_ini" class="data"/>
-                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_ini" class="data"/>
+                    <input type="number" placeholder="dia" max="31" min="1" name="dia_ini" class="data_ini"/>
+                    <input type="number" placeholder="mes" max="12" min="1" name="mes_ini" class="data_ini"/>
+                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_ini" class="data_ini"/>
                 </div>
             </div>
             <div class="form-esq">
                 <label>Data final:</label>
                 <div class="forDate">
-                    <input type="number" placeholder="dia" max="31" min="1" name="dia_fim" class="data" />
-                    <input type="number" placeholder="mes" max="12" min="1" name="mes_fim" class="data"/>
-                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_fim" class="data"/>
+                    <input type="number" placeholder="dia" max="31" min="1" name="dia_fim" class="data_ini" />
+                    <input type="number" placeholder="mes" max="12" min="1" name="mes_fim" class="data_ini"/>
+                    <input type="number" placeholder="ano" max="<?= date('Y')?>" min="2013" name="ano_fim" class="data_ini"/>
                 </div>
             </div>
             <div class="form-esq">
